# rubble-no-rtic-demo

./: Cargo.toml  Embed.toml  README.md
.cargo/: config
src/: main.rs
